--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "quiz using OOP in typescript",
   "main": "index.js",
   "type": "module",
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
